# KVPlayer

./: Cargo.toml  KVPlayer-Windows.spec  KVPlayer.spec  LICENSE  LICENSE.md  Privacy Policy.md  README.md  THANK_YOU.md  WELCOME.md  build.rs  kvplayer.kv  main.py
python version/: KVPlayer-linux.spec  kvplayer.kv
src/: main.rs
ui/: app_window.slint
